Fixing hero logo on mobile

--- a/src/components/hero.scss
+++ b/src/components/hero.scss
@@ -4,8 +4,7 @@
     background-size: cover;
 
     .logo {
-      max-width: 90%;
-      height: auto;
+      max-width: 100%;
     }
   }
 }
